# emr-serverless-samples

./: .gitignore  Best_Practices.md  README.md  test
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: mwaa_release.yaml
airflow/: Dockerfile  README.md  requirements-dev.txt  setup.py
airflow/dags/: example_emr_serverless.py  example_end_to_end.py
airflow/tests/: test_dag_integrity.py  test_simple_submit.py
cdk/: README.md
cdk/emr-serverless-with-mwaa/: .gitignore  README.md  app.py  requirements.txt
cdk/emr-serverless-with-sfn/: README.md  app.py  requirements-dev.txt
cloudformation/: README.md  emr_serverless_cloudwatch_dashboard.yaml  emr_serverless_full_deployment.yaml  emr_serverless_spark_app.yaml  kds_emr_serverless.yaml  mwaa_emr_serverless.yaml
cloudformation/emr-serverless-cloudwatch-dashboard/: README.md  emr_serverless_cloudwatch_dashboard.yaml
cloudformation/lake-formation-and-apache-iceberg/: README.md  lake_formation_iceberg.yaml  show_table.py
examples/dbt/: .gitignore  README.md  emrs_sparkconnect_autopatch.py  profiles.yml  run_dbt.py
examples/hive/: README.md  create_table.sql  extreme_weather.sql
examples/java/: README.md
examples/java-api/: README.md
examples/pyspark/: README.md  extreme-weather.py
examples/pyspark/delta-lake/: Dockerfile  README.md  main.py  pyproject.toml
examples/python-api/: .gitignore  README.md  emr_serverless.py
examples/spark-connect/: README.md  S3 Tables SparkConnect Iceberg Notebook.ipynb  direct-s3-jdbc-without-catalog.ipynb  s3tables-spark-connect-iceberg.ipynb  (+1 more)
(+64 files in other folders)
